added /salary/years endpoint
